Add some unit tests.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,7 +21,7 @@
 			"request": "launch",
 			"name": "Test",
 			"program": {
-				"command": "./tests.sh"
+				"command": "./test.sh"
 			},
 			"args": [
 				".",
